samples/_failures_safe/1761350236_8dc731_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4fc4403f.c: In function ‘main’:
./samples/SAFE/__tmp_4fc4403f.c:154:17: error: expected declaration or statement at end of input
  154 |                 } else {
      |                 ^
./samples/SAFE/__tmp_4fc4403f.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4fc4403f.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4fc4403f.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4fc4403f.c:154:17: error: expected declaration or statement at end of input
